2001-04-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.cygwin: Travis' changes

2001-04-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/Gump.cc: fixed "ok to load?"/"ok to save?" dialog boxes.
	* data/savegump.shp: added borders for larger resolutions

2001-04-17  Dancer Vesperman <dancer@users.sourceforge.net>
	* keyactions.cc: Honour std namespace

2001-04-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* schedule.*, actors.cc: added Bake_schedule

2001-04-16  Max Horn  <max@quendi.de>
	* README.MacOS, mac/mac_autoconfig.h: updated for Alpha 3
	* Paperdoll_gump.cc, intrinsics.cc, Flex.cc
	* gamewin.h: second version of scroll_if_needed() fixed as to
	  always return a sensible value
	* expack.cc: enlarged ugly hack for MacOS to also build flx.in
	  in the BG subdir (yeah I know it is evil!)

2001-04-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.*, keyactions.*: added a 'test' action, for testing anything you like
	* schedule.*, actors.cc: added Forge_schedule
	* actions.*:	animate action: complete full cycle
			frames action: allow setting frames of other objects
			animate action: allow setting length of cycle
	
2001-04-16  Dancer Vesperman <dancer@users.sourceforge.net>
	* Upgrade for g++ 3.0
		- Repair a throw specification in exceptions.h
		- Missing std:: qualifier to ostream in files/Flex.h
		- hash_utils.h: Fixed up inclusion for hash_map/hash_set
		- autoarray.h: Fixed range_error exception definition
		- gamewin.h: qualify ostream with std::
		- pathfinder/path.cc: Fix up inclusion of hash_set
		- vec.h: &*begin() instead of begin. Iterators aren't
			necessarily pointers. vec.h makes lots of foolish
			assumptions that a vector::iterator is typedef'ed
			to a pointer, and that a pointer can be used in
			their place. Not so.
		- files/Flex.cc: std::ostream
		- files/utils.cc: Max will be pleased. We now do things
			the way his compiler does :)
		- gumps/Paperdoll_gump.cc: std::cerr and std::endl