@@ -49,5 +49,10 @@ const int c_any_framenum = -359;
 #define MOVE_ETHEREAL (1<<7)
 #define MOVE_ALL (MOVE_FLY|MOVE_WALK|MOVE_SWIM|MOVE_ETHEREAL)
 
+//	Wrapping:
+#define INCR_CHUNK(x) ((x + 1)%c_num_chunks)
+#define DECR_CHUNK(x) ((x - 1 + c_num_chunks)%c_num_chunks)
+#define INCR_TILE(x) ((x + 1)%c_num_tiles)
+#define DECR_TILE(x) ((x - 1 + c_num_tiles)%c_num_tiles)
 
 #endif
